# password-checker-cli

./: .gitignore  LICENSE  README.md  main.py  password_checker.py  pyproject.toml
password_checker/: main.py  rich_config.yaml
password_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
