[project]
name = "password-checker"
version = "1.0.0" 
description = "A CLI password strength analyzer" 
requires-python = ">=3.10"

dependencies = [
    "typer",
    "rich",
    "pyyaml"     
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta" 

[tool.setuptools]
packages = ["password_checker"]

[project.scripts]
password-checker = "password_checker.main:app"